now theres style?

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" type="text/css" href="mystyles.css" media="screen" />
 <body>
 <h1>Rusell Tan's Github Page</h1>
 <p>I'm hosted with GitHub Pages. Na'am sayin?</p>
