Made fixed header

--- a/index.html
+++ b/index.html
@@ -1,8 +1,23 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" type="text/css" href="mystyles.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="russellStyle.css" media="screen" />
+
 <body>
-<h1>Rusell Tan's Github Page</h1>
-<p>I'm hosted with GitHub Pages. Na'am sayin?</p>
+<div class="header-cont">
+    <div class="header">
+        <table align="center">
+            <tr>
+                <td>Home</td>
+                <td>Projects</td>
+                <td>Experience</td>
+                <td>Contact</td>
+            </tr>
+        </table>
+    
+    </div>
+</div>
+<div class="content"></div>
 </body>
+<footer>
+</footer>
 </html>
